# ray-tracing

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  readme.md
src/: main.cpp
